--- a/windows/WFP/block/block.vcxproj
+++ b/windows/WFP/block/block.vcxproj
@@ -180,6 +180,9 @@
     <ClInclude Include="wfp.h" />
     <ClInclude Include="wfp_callbacks.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".clang-format" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
