--- a/windows/WFP/libblock/CMakeLists.txt
+++ b/windows/WFP/libblock/CMakeLists.txt
@@ -4,7 +4,10 @@ project ("block")
 
 add_definitions(-DLIBBLOCK_EXPORTS)
 
-add_library(${PROJECT_NAME} SHARED libblock.cpp)
+# utils
+set(UTILS_SRC ${CMAKE_SOURCE_DIR}/utils/log.cpp)
+
+add_library(${PROJECT_NAME} SHARED libblock.cpp ${UTILS_SRC})
 
 # All user-mode functions are exported from fwpuclnt.dll.
 # All kernel-mode functions are exported from fwpkclnt.sys.
