--- a/windows/WFP/CMakeLists.txt
+++ b/windows/WFP/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required (VERSION 3.11)
 add_subdirectory(libblock)
 
 # 编译测试程序
-# add_subdirectory(test)
+add_subdirectory(test)
 
 # 服务程序
 add_subdirectory(service)
