--- a/windows/WFP/test/CMakeLists.txt
+++ b/windows/WFP/test/CMakeLists.txt
@@ -4,6 +4,13 @@ project ("test")
 
 # link_directories(${PROJECT_SOURCE_DIR}/bin)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable("test_driver" test_driver.cpp)
 
-target_link_libraries(${PROJECT_NAME} block ws2_32.lib)
+target_link_libraries("test_driver" block ws2_32.lib)
+
+add_executable("test_service" test_service.cpp)
+
+target_link_libraries("test_service" block ws2_32.lib
+                                     spdlog::spdlog
+                                     nlohmann_json::nlohmann_json
+                                     ${Boost_LIBRARIES})
