--- a/linux/domain_block.service
+++ b/linux/domain_block.service
@@ -1,8 +1,9 @@
 [Unit]
 Description=A domain block service
 [Service]
-ExecStart=/home/dacao/work/self/domain_block/bin/domain_block_service
+ExecStart=/opt/domain_block/domain_block_service
 ExecStop=/bin/kill -TERM $MAINPID
 Type=simple
+TimeoutStopSec=1
 [Install]
 WantedBy=multi-user.target
