windows上测试通过

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Windows")
       set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}" /MT)
       set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_RELEASE}" /MTd)
     endif()
+    add_subdirectory(UI/domain_block_client)
     add_subdirectory(windows/WFP)
 else()
     add_subdirectory(UI/domain_block_client)
